// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check result screen snapshots renders a distinct FALLBACK snapshot with the fallback notice and disclaimer 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          className="rounded-2xl bg-amber-100 px-4 py-3"
          testID="check-result-fallback-notice"
        >
          <Text
            className="text-center text-sm text-amber-950"
          >
            We couldn't fully assess this from what you shared. When in doubt, it's safest to have a vet take a look.
          </Text>
        </View>
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-amber-400"
            testID="urgency-banner-VET_SOON"
          >
            <Text
              className="text-center text-lg font-bold text-amber-950"
            >
              See a vet soon
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            We can't reliably assess this from the information provided. Please contact a licensed veterinarian to have your pet checked.
          </Text>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications to your pet without a veterinarian's guidance.
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`check result screen snapshots renders a distinct snapshot with the emergency notice above all AI content when redFlag is present 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          className="gap-2 rounded-2xl bg-red-600 px-4 py-3"
          testID="check-result-emergency-notice"
        >
          <Text
            className="text-center text-lg font-semibold text-white"
          >
            This may be an emergency
          </Text>
          <Text
            className="text-center text-sm text-white"
          >
            Based on what you shared, your pet may need urgent care right away.
          </Text>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-emergency-cta"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              See emergency steps
            </Text>
          </View>
        </View>
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-red-600"
            testID="urgency-banner-EMERGENCY_NOW"
          >
            <Text
              className="text-center text-lg font-bold text-white"
            >
              Emergency — see a vet now
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            General guidance based on the information provided.
          </Text>
          <View
            className="gap-2"
            testID="check-result-possible-causes"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What this could be
            </Text>
            <View>
              <Text
                className="text-base font-semibold text-brand-900"
              >
                Mild upset stomach
              </Text>
              <Text
                className="text-sm text-brand-700"
              >
                Reported symptoms are consistent with this.
              </Text>
            </View>
          </View>
          <View
            className="gap-2"
            testID="check-result-red-flags-to-watch"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              When to get help fast
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Repeated vomiting
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Lethargy that worsens
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications without veterinary guidance.
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-vet-questions"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Questions to ask your vet
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • How long have symptoms been present?
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`check result screen snapshots renders a stable snapshot for EMERGENCY_NOW with the disclaimer present 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-red-600"
            testID="urgency-banner-EMERGENCY_NOW"
          >
            <Text
              className="text-center text-lg font-bold text-white"
            >
              Emergency — see a vet now
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            General guidance based on the information provided.
          </Text>
          <View
            className="gap-2"
            testID="check-result-possible-causes"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What this could be
            </Text>
            <View>
              <Text
                className="text-base font-semibold text-brand-900"
              >
                Mild upset stomach
              </Text>
              <Text
                className="text-sm text-brand-700"
              >
                Reported symptoms are consistent with this.
              </Text>
            </View>
          </View>
          <View
            className="gap-2"
            testID="check-result-red-flags-to-watch"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              When to get help fast
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Repeated vomiting
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Lethargy that worsens
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications without veterinary guidance.
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-vet-questions"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Questions to ask your vet
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • How long have symptoms been present?
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`check result screen snapshots renders a stable snapshot for MONITOR with the disclaimer present 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-blue-500"
            testID="urgency-banner-MONITOR"
          >
            <Text
              className="text-center text-lg font-bold text-white"
            >
              Monitor closely at home
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            General guidance based on the information provided.
          </Text>
          <View
            className="gap-2"
            testID="check-result-possible-causes"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What this could be
            </Text>
            <View>
              <Text
                className="text-base font-semibold text-brand-900"
              >
                Mild upset stomach
              </Text>
              <Text
                className="text-sm text-brand-700"
              >
                Reported symptoms are consistent with this.
              </Text>
            </View>
          </View>
          <View
            className="gap-2"
            testID="check-result-red-flags-to-watch"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              When to get help fast
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Repeated vomiting
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Lethargy that worsens
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-home-care"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Caring for them at home
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Offer small amounts of water
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications without veterinary guidance.
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-vet-questions"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Questions to ask your vet
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • How long have symptoms been present?
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`check result screen snapshots renders a stable snapshot for REASSURE with the disclaimer present 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-green-600"
            testID="urgency-banner-REASSURE"
          >
            <Text
              className="text-center text-lg font-bold text-white"
            >
              Likely not urgent
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            General guidance based on the information provided.
          </Text>
          <View
            className="gap-2"
            testID="check-result-possible-causes"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What this could be
            </Text>
            <View>
              <Text
                className="text-base font-semibold text-brand-900"
              >
                Mild upset stomach
              </Text>
              <Text
                className="text-sm text-brand-700"
              >
                Reported symptoms are consistent with this.
              </Text>
            </View>
          </View>
          <View
            className="gap-2"
            testID="check-result-red-flags-to-watch"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              When to get help fast
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Repeated vomiting
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Lethargy that worsens
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-home-care"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Caring for them at home
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Offer small amounts of water
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications without veterinary guidance.
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-vet-questions"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Questions to ask your vet
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • How long have symptoms been present?
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`check result screen snapshots renders a stable snapshot for VET_24H with the disclaimer present 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-orange-600"
            testID="urgency-banner-VET_24H"
          >
            <Text
              className="text-center text-lg font-bold text-white"
            >
              See a vet within 24 hours
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            General guidance based on the information provided.
          </Text>
          <View
            className="gap-2"
            testID="check-result-possible-causes"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What this could be
            </Text>
            <View>
              <Text
                className="text-base font-semibold text-brand-900"
              >
                Mild upset stomach
              </Text>
              <Text
                className="text-sm text-brand-700"
              >
                Reported symptoms are consistent with this.
              </Text>
            </View>
          </View>
          <View
            className="gap-2"
            testID="check-result-red-flags-to-watch"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              When to get help fast
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Repeated vomiting
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Lethargy that worsens
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications without veterinary guidance.
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-vet-questions"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Questions to ask your vet
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • How long have symptoms been present?
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`check result screen snapshots renders a stable snapshot for VET_SOON with the disclaimer present 1`] = `
<RNCSafeAreaView
  className="flex-1 bg-brand-50"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  testID="check-result-screen"
>
  <RCTScrollView
    className="flex-1"
    testID="check-result-scroll"
  >
    <View>
      <View
        className="gap-6 px-4 pb-8 pt-4"
      >
        <View
          testID="check-result-urgency-banner"
        >
          <View
            className="items-center rounded-2xl px-4 py-3 bg-amber-400"
            testID="urgency-banner-VET_SOON"
          >
            <Text
              className="text-center text-lg font-bold text-amber-950"
            >
              See a vet soon
            </Text>
          </View>
        </View>
        <View
          className="rounded-2xl bg-white p-4 shadow-md gap-2 gap-4"
        >
          <Text
            className="text-base text-brand-900"
            testID="check-result-summary"
          >
            General guidance based on the information provided.
          </Text>
          <View
            className="gap-2"
            testID="check-result-possible-causes"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What this could be
            </Text>
            <View>
              <Text
                className="text-base font-semibold text-brand-900"
              >
                Mild upset stomach
              </Text>
              <Text
                className="text-sm text-brand-700"
              >
                Reported symptoms are consistent with this.
              </Text>
            </View>
          </View>
          <View
            className="gap-2"
            testID="check-result-red-flags-to-watch"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              When to get help fast
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Repeated vomiting
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Lethargy that worsens
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-home-care"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Caring for them at home
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Offer small amounts of water
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-do-not"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              What not to do
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • Do not give human medications without veterinary guidance.
            </Text>
          </View>
          <View
            className="gap-2"
            testID="check-result-vet-questions"
          >
            <Text
              className="text-lg font-semibold text-brand-900"
            >
              Questions to ask your vet
            </Text>
            <Text
              className="text-sm text-brand-700"
            >
              • How long have symptoms been present?
            </Text>
          </View>
        </View>
        <View
          accessibilityRole="text"
          className="rounded-lg bg-brand-50 px-4 py-3"
          testID="vet-disclaimer"
        >
          <Text
            className="text-center text-sm text-brand-900"
          >
            Paw Care Right + offers general pet-care guidance, not veterinary care or treatment. Always consult a licensed veterinarian.
          </Text>
        </View>
        <View
          className="gap-2"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-find-vet"
          >
            <Text
              className="text-base font-semibold text-white"
            >
              Find a vet nearby
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="flex-row items-center justify-center gap-2 rounded-lg border border-brand-700 bg-white px-6 py-3"
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-share"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Share as text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="px-4 py-3"
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
            testID="check-result-done"
          >
            <Text
              className="text-base font-semibold text-brand-700"
              maxFontSizeMultiplier={1.5}
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
